update Privacy permission

--- a/MyPhotoApp/Info.plist
+++ b/MyPhotoApp/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>&quot;Allow access to take a photo&quot;</string>
 </dict>
 </plist>
